# mcp-yolo

./: .gitignore  Dockerfile  README.md  main.py  pyproject.toml  server.json
.agent/skills/: yolo-bench.md  yolo-deploy.md
.github/workflows/: docker-publish.yml  publish.yml
mcp_yolo/: engine.py  main.py  server.py
tests/: test_engine.py
