[project]
name = "mcp-yolo"
version = "0.1.4"
description = "MCP server for YOLOE zero-shot object detection and segmentation"
readme = "README.md"
requires-python = ">=3.14"
authors = [
    { name = "Rajan Shukla", email = "rajanshukla@example.com" }
]
license = { text = "MIT" }
keywords = ["mcp", "yolo", "yoloe", "zero-shot", "object-detection", "segmentation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "clip",
    "fastmcp>=3.0.2",
    "ultralytics>=8.4.16",
]

[project.scripts]
mcp-yolo = "mcp_yolo.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["mcp_yolo"]

[tool.uv.sources]
clip = { git = "https://github.com/openai/CLIP.git" }
